--- a/style_light.css
+++ b/style_light.css
@@ -1,6 +1,7 @@
 :root {
     --background: #8ee4af;
     --tile: #379683;
+    --tile-used: rgba(80, 156, 141, 0.664); 
     --headers: #05386b;
     --text: #edf5e1;
     --modal: rgb(32, 92, 148);
@@ -13,6 +14,7 @@
 .dark_theme {
     --headers: #5cdb95;
     --tile: #379683;
+    --tile-used:rgba(80, 156, 141, 0.664);  
     --background: #05386b;
     --text: #edf5e1;
     --modal: #5cdb95;
@@ -81,6 +83,10 @@ td.category_tile {
 
 td.question_tile {
     color: var(--text);
+}
+
+td.question_tile.used {
+    background-color: var(--tile-used);
 }
 
 /*
@@ -152,6 +158,15 @@ p.large {
 }
 
 .wiki_button {
+    display: none;
+    justify-content: center;
+}
+
+#close_button {
+    justify-content: center;
+}
+
+#close_button_div {
     display: none;
     justify-content: center;
 }
