--- a/style.css
+++ b/style.css
@@ -39,6 +39,14 @@ body {
     justify-content: center;
 }
 
+#score_div {
+    display: flex;
+    justify-content: space-evenly;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: var(--headers);
+}
+
 /*
 * Loading page.
 */
@@ -187,7 +195,7 @@ button {
     transition: .4s;
 }
 
-button.color_switch {
+#color_switch {
     width: 100px;
     height: 30px;
     position: absolute;
