--- a/style.css
+++ b/style.css
@@ -160,6 +160,30 @@ form h3 {
 }
 
 /*
+* Game end.
+*/
+#game_end_div {
+    background-color: var(--tile);
+    border-radius: 15px;
+    width: 50%;
+    position: relative;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#game_end_content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    color: var(--text);
+}
+
+/*
 * Modal
 */
 .modal {
