--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ form h3 {
 /*
 * Modal
 */
-.modal {
+#modal {
     display: none; /* Hidden by default */
     flex-direction: column;
     justify-content: center;
@@ -200,7 +200,7 @@ form h3 {
     border-radius: 15px;
 }
 
-.modal_content {
+#modal_content {
     color: var(--modal-text);
     font-size: xx-large;
     font-family: Arial, Helvetica, sans-serif;
@@ -214,7 +214,7 @@ form h3 {
 * Modal text styling.
 */
 
-p.answer {
+#answer_p {
     display: none;
 }
 
@@ -223,7 +223,7 @@ p.large {
     padding: 10px 0px;
 }
 
-.answer_description {
+#answer_description {
     display: none;
     font-size: medium;
     height: 100px;
@@ -238,7 +238,7 @@ p.large {
 * Button div styling.
 */
 
-.post_reveal_buttons_div {
+#post_reveal_buttons_div {
     display: none;
 }
 
@@ -246,7 +246,7 @@ p.large {
     padding: 10px;
 }
 
-.answer_buttons {
+#answer_buttons_div {
     display: flex;
     justify-content: space-around;
 }
