--- a/style.css
+++ b/style.css
@@ -281,12 +281,20 @@ button {
     transition: .4s;
 }
 
-#color_switch {
-    width: 100px;
+#log_out {
+    width: 110px;
     height: 30px;
     position: absolute;
     top: 10px;
     right: 10px;
+}
+
+#color_switch {
+    width: 80px;
+    height: 30px;
+    position: absolute;
+    top: 10px;
+    right: 130px;
 }
 
 button.correct {
